test/tests/errors/error-for-while-not-bool.sm
// true
// false
/**/
/**/

program {
    var x = 0;
    for (x = 1 while 3) {}
}